plugins/watcher/examples/vap-interceptor-webhook.yaml
apiVersion: v1
kind: Service
metadata:
  name: vap-interceptor
  namespace: default
spec:
  selector:
    app: vap-interceptor
  ports:
  - port: 443
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vap-interceptor
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vap-interceptor
  template:
    metadata:
      labels:
        app: vap-interceptor
    spec:
      serviceAccountName: vap-interceptor
      containers:
      - name: interceptor
        image: nginx:alpine  # Placeholder - would need custom image
        ports:
        - containerPort: 8080
