plugins/watcher/examples/vap-mutating-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: vap-audit-mutator
  labels:
    app: insights-event-watcher
    component: vap-mutator
webhooks:
- name: vap-audit-mutator.fairwinds.com
  clientConfig:
    service:
      name: insights-event-watcher
      namespace: insights-agent
      path: "/mutate"
      port: 8080
  rules:
  - operations: ["CREATE", "UPDATE"]
    apiGroups: ["admissionregistration.k8s.io"]
    apiVersions: ["v1beta1"]
    resources: ["validatingadmissionpolicybindings"]
  admissionReviewVersions: ["v1", "v1beta1"]
  sideEffects: None
  failurePolicy: Ignore
  namespaceSelector:
    matchLabels: {}
  objectSelector: {}
